# magictables

./: .gitignore  .pre-commit.config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  example.ipynb  example.py  magic.db  magictables.py  main.py  pyproject.toml  requirements.txt  setup.py  test_magictables.py
.github/workflows/: pr-and-push.yaml  publish.yaml  run-tests.yaml
magictables/: __init__.py  chain.py  database.py  decorators.py  explain.py  fallback_driver.py  graph_interface.py  hybrid_driver.py  input.py  magictable.py  magictablechain.py  magictables.py  mapping.py  notsomagictable.py  notsomagictables.py  prompts.py  query.py  schema_generator.py  shadow_db.py  source.py  sources.py  tablegraph.py  utils.py
magictables/docs/: api_reference.md  quickstart.md
magictables/src/magictables/: database.py  decorators.py  utils.py
